Emails: Fix wrong card bottom margin on mobile in Email Comparison page

--- a/client/my-sites/email/email-providers-stacked-comparison/email-provider-stacked-card/style.scss
+++ b/client/my-sites/email/email-providers-stacked-comparison/email-provider-stacked-card/style.scss
@@ -124,6 +124,10 @@ $width-left-panel-card: 55%;
 }
 
 .email-providers-stacked-comparison__provider-card {
+	&.action-panel {
+		padding-bottom: 24px;
+	}
+
 	@include break-medium {
 		padding-top: 36px;
 
